# API-Service-Network

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Common/Clients/Email/: EmailApi.py
Common/Clients/Fishbowl/: FishbowlSession.py
Common/Clients/Intuiflow/: IntuiflowApi.py
Common/Utils/: Logging.py
Common/Utils/Modules/: EmailReport.py
RetailInventoryManager/: app.py  config.py  data.py  modules.py  prod_server.py  start_server.bat  sync.py
RetailInventoryManager/static/js/: app.js
RetailInventoryManager/templates/: base.html  how_to.html  index.html  login.html
VariousInternalServices/: OnTimePerformance.py  TaxSystemHealth.py  VendorTracker.py  WipUpdate.py
src/common.egg-info/: PKG-INFO  SOURCES.txt
src/common/Clients/Email/: EmailApi.py
src/common/Clients/Fishbowl/: FishbowlCalls.py  FishbowlSession.py
src/common/Clients/Google/: GoogleSession.py  README.txt
src/common/Clients/Intuiflow/: IntuiflowApi.py
src/common/Clients/Microsoft/: GraphSession.py
src/common/Utils/: Utils.py
